--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/slimkaki/WebXP#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "gsap": "^3.8.0",
     "three": "^0.132.2"
   }
 }
